--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,4 @@
 <router-outlet></router-outlet>
 
 <app-layout-footer></app-layout-footer>
-<app-notifications></app-notifications>
+<!-- <app-notifications></app-notifications> uncomment after notifications component is implemented-->
